UI completed, pending on service and adapt BE to receive problem and domain on post body

--- a/poe-fe/poe-fe/src/app/components/editor/editor.component.scss
+++ b/poe-fe/poe-fe/src/app/components/editor/editor.component.scss
@@ -25,3 +25,8 @@
     font-size: 11pt;
     font-family: 'Lucida Console';
 }
+
+::ng-deep .CodeMirror {
+    height: calc(100% - 35px);
+    font-size: 10pt;
+}
