--- a/poe-fe/poe-fe/src/app/components/editor/editor.component.html
+++ b/poe-fe/poe-fe/src/app/components/editor/editor.component.html
@@ -1,10 +1,27 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-6 editor-box">
-            DOMAIN
+            Domain:
+            <ngx-codemirror
+                [(ngModel)]="domainContent"
+                [options]="{
+                    lineNumbers: true,
+                    theme: 'material',
+                    mode: 'scheme',
+                    setSize: '700px'
+                }"
+            ></ngx-codemirror>
         </div>
         <div class="col-6 editor-box">
-            PROBLEM
+            Problem:
+            <ngx-codemirror
+                [(ngModel)]="problemContent"
+                [options]="{
+                    lineNumbers: true,
+                    theme: 'material',
+                    mode: 'scheme'
+                }"
+            ></ngx-codemirror>
         </div>
     </div>
     <div class="row">
@@ -12,15 +29,15 @@
             <div class="form-group row">
                 <label for="timeout-box" class="col-form-label" data-toggle="tooltip" data-placement="top"
                        title="The planner will be killed after this time. Increse it if Optic is not ending on time.">Timeout for the planner:</label>
-                <input id="timeout-box" type="number" size="3" max="20" min="1" placeholder="2"/>
+                <input #timeout id="timeout-box" type="number" size="3" max="20" min="1" placeholder="2"/>
                 
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Send to the planner
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item">SGPlan 5.2.2</a>
-                    <a class="dropdown-item">Optic CLP</a>
+                    <a class="dropdown-item" (click)="executeInSGPlan(timeout.value)">SGPlan 5.2.2</a>
+                    <a class="dropdown-item" (click)="executeInOptic(timeout.value)">Optic CLP</a>
                     </div>
                 </div>
             </div>
