Reimplemented the two-way binding, at some point I removed it

--- a/poe-fe/poe-fe/src/app/components/editor/editor-box/editor-box.component.html
+++ b/poe-fe/poe-fe/src/app/components/editor/editor-box/editor-box.component.html
@@ -1,7 +1,8 @@
 {{title}}:
 <ngx-codemirror
     #editor
-    [(ngModel)]="content"
+    [ngModel]="content"
+    (ngModelChange)="onContentChanged($event)"
     [options]="editorOptions"
 ></ngx-codemirror>
 <div class="dropdown">
