Adding blocksworld examples to simplify checking if planners works (I don't like very much how this domain has been done, as it seems it can hold an infinite ammount of blocks at the same time, but just for test)

--- a/poe-fe/poe-fe/src/app/components/editor/editor.component.html
+++ b/poe-fe/poe-fe/src/app/components/editor/editor.component.html
@@ -3,6 +3,7 @@
     (domainSelected)="importFile($event, 'domain')" 
     (problemSelected)="importFile($event, 'problem')"
     (downloadContent)="downloadContent($event)"
+    (loadExample)="loadExample($event)"
 >
 </app-toolbar>
 
