Adding version to a global variable to simplify it

--- a/poe-fe/poe-fe/src/app/components/toolbar/toolbar.component.html
+++ b/poe-fe/poe-fe/src/app/components/toolbar/toolbar.component.html
@@ -46,7 +46,7 @@
       </li>
     </ul>
     <span class="navbar-text">
-      POE v1.0 Release Candidate
+      {{version}}
     </span>
   </div>
 </nav>
