--- a/poe-fe/poe-fe/src/app/components/editor/editor.component.html
+++ b/poe-fe/poe-fe/src/app/components/editor/editor.component.html
@@ -9,10 +9,16 @@
 
 <!-- Content-->
 <div class="container-fluid">
-    <!-- ERROR ALERTS -->
-    <div *ngIf="alertMessage != ''" class="alert alert-danger" role="alert">
-        {{alertMessage}}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <!-- ERROR AND WARNING ALERTS -->
+    <div *ngIf="alertError != ''" class="alert alert-danger" role="alertError">
+        {{alertError}}
+        <button type="button" class="close" aria-label="Close" (click)="alertError = ''">
+          <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div *ngIf="alertWarning != ''" class="alert alert-warning" role="alertWarning">
+        {{alertWarning}}
+        <button type="button" class="close" aria-label="Close" (click)="alertWarning = ''">
           <span aria-hidden="true">&times;</span>
         </button>
     </div>
