Adding sample logo and instructions to modify it

--- a/poe-fe/poe-fe/src/app/components/toolbar/toolbar.component.scss
+++ b/poe-fe/poe-fe/src/app/components/toolbar/toolbar.component.scss
@@ -45,3 +45,9 @@
   -moz-border-radius: 6px 0 6px 6px;
   border-radius: 6px 0 6px 6px;
 }
+
+.logo-navbar {
+  width: 30px;
+  height: 30px;
+  margin: 0 5px 0 15px;
+}
