--- a/poe-fe/poe-fe/src/app/components/toolbar/toolbar.component.html
+++ b/poe-fe/poe-fe/src/app/components/toolbar/toolbar.component.html
@@ -1,4 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <img src="assets/logo.png" alt="app-logo" class="logo-navbar"/>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -112,7 +113,13 @@
             <li><a href="https://nms.kcl.ac.uk/planning/software/optic.html">https://nms.kcl.ac.uk/planning/software/optic.html</a></li>
           </ul>
         </ul>
-
+        <b>Images included:</b>
+        <ul>
+          <li>Logo and icon</li>
+          <ul>
+            <li><pre>{{logoLicense}}</pre></li>
+          </ul>
+        </ul>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
