Adding compodoc for FE documenatation

--- a/poe-fe/poe-fe/src/app/components/toolbar/toolbar.component.html
+++ b/poe-fe/poe-fe/src/app/components/toolbar/toolbar.component.html
@@ -41,6 +41,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="#" data-toggle="modal" data-target="#licenseModal">License</a>
           <a class="dropdown-item" href="#" data-toggle="modal" data-target="#attribModal">Authors & attributions</a>
+          <a class="dropdown-item" href="assets/doc">Frontend documentation</a>
         </div>
       </li>
     </ul>
