Adding swagger to BE and link from FE to it

--- a/poe-fe/poe-fe/src/app/components/toolbar/toolbar.component.html
+++ b/poe-fe/poe-fe/src/app/components/toolbar/toolbar.component.html
@@ -42,6 +42,7 @@
           <a class="dropdown-item" href="#" data-toggle="modal" data-target="#licenseModal">License</a>
           <a class="dropdown-item" href="#" data-toggle="modal" data-target="#attribModal">Authors & attributions</a>
           <a class="dropdown-item" href="assets/doc">Frontend documentation</a>
+          <a class="dropdown-item" [href]="backendUrl">Backend Swagger doc</a>
         </div>
       </li>
     </ul>
