Adding options to increase/decrease fontsize of the editors

--- a/poe-fe/poe-fe/src/app/components/editor/editor-box/editor-box.component.html
+++ b/poe-fe/poe-fe/src/app/components/editor/editor-box/editor-box.component.html
@@ -2,8 +2,11 @@
   <div class="card-header">
     <h6 class="panel-title">{{title}}</h6>
     <!-- TODO: Change the ngIf to an ngClass that changes the image using styles -->
-    <img *ngIf="!fullscreen" class="fullscreen-icon" src="assets/icons/open_in_full-24px.svg" alt="Set editor to full screen" (click)="onToogleFullscreen()"/>
-    <img *ngIf="fullscreen" class="fullscreen-icon" src="assets/icons/close_fullscreen-24px.svg" alt="Set editor to normal size" (click)="onToogleFullscreen()"/>
+    <img *ngIf="!fullscreen" class="editor-icon" src="assets/icons/open_in_full-24px.svg" alt="Set editor to full screen" (click)="onToogleFullscreen()"/>
+    <img *ngIf="fullscreen" class="editor-icon" src="assets/icons/close_fullscreen-24px.svg" alt="Set editor to normal size" (click)="onToogleFullscreen()"/>
+    <!-- Zoom options (change font size) -->
+    <img class="editor-icon" src="assets/icons/zoom_in-24px.svg" alt="Incresase font size" (click)="increaseFontSize()"/>
+    <img class="editor-icon" src="assets/icons/zoom_out-24px.svg" alt="Decrease font size" (click)="decreaseFontSize()"/>
   </div>
   <div class="card-body">
     <ngx-codemirror
@@ -11,6 +14,7 @@
       [ngModel]="content"
       (ngModelChange)="onContentChanged($event)"
       [options]="editorOptions"
+      [style.font-size]="fontSize + 'pt'"
     ></ngx-codemirror>
     <div class="dropdown">
       <button *ngIf="type == 'domain' || 'problem'" class="btn btn-secondary dropdown-toggle" type="button" id="codeSnippet" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
