--- a/poe-fe/poe-fe/src/app/components/editor/editor.component.scss
+++ b/poe-fe/poe-fe/src/app/components/editor/editor.component.scss
@@ -1,36 +1,62 @@
 #heading-output {
-    padding: 0;
+  padding: 0;
 }
 
 .accordion .card:first-of-type {
-    border-bottom: 1px solid rgba(0,0,0,.125) !important;
+  border-bottom: 1px solid rgba(0,0,0,.125) !important;
 }
 
 #console-output {
-    font-size: 9pt;
-    font-family: 'Lucida Console';
+  font-size: 9pt;
+  font-family: 'Lucida Console';
 }
 
 #timeout-box {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 
 .col-form-label {
-    margin-left: 20px;
-    margin-right: 10px;
+  margin-left: 20px;
+  margin-right: 10px;
 }
 
 .run-btn {
-    margin-left: 10px;
-    width: 125px;
+  margin-left: 10px;
+  width: 125px;
+}
+
+.hidden {
+  display: none !important;
+}
+
+.w98 {
+  width: 98%;
 }
 
 .editor-box {
-  height: 75vh;
   font-size: 11pt;
   font-family: 'Lucida Console';
 }
 
-.hidden {
-    display: none !important;
+#timeout-box {
+  width: 45px;
+}
+
+.timeout-label {
+  margin-left: 0;
+}
+
+// Media queries to resolve resolution issues on vertical screens
+// TO DO: 
+// - Check this carefully. For now I'm not focusing on testing for smartphones or tablets
+@media (max-width: 767px) {
+  .editor-box {
+    height: 70vh;
+  }  
+}
+
+@media (min-width: 767px) {
+  .editor-box {
+    height: 75vh;
+  }  
 }
