--- a/poe-fe/poe-fe/src/app/components/editor/editor.component.scss
+++ b/poe-fe/poe-fe/src/app/components/editor/editor.component.scss
@@ -43,7 +43,11 @@
 }
 
 .timeout-label {
-  margin-left: 0;
+  margin-left: 5px;
+}
+
+.container-fluid {
+  margin-top: 2px;
 }
 
 // Media queries to resolve resolution issues on vertical screens
