--- a/poe-fe/poe-fe/src/app/components/editor/editor.component.html
+++ b/poe-fe/poe-fe/src/app/components/editor/editor.component.html
@@ -23,28 +23,28 @@
         </button>
     </div>
     <!-- ACTIONS (NORMAL) -->
-    <div class="row d-none d-sm-none d-md-block">
+    <div class="row">
         <div class="col-12">
             <div class="form-group row">
                 <!-- Execution options -->
-                <div class="col-7">
+                <div class="col-sm-12 col-md-8 col-lg-7">
                     <label for="timeout-box" class="col-form-label timeout-label" data-toggle="tooltip" data-placement="top"
                             title="The planner will be killed after this time. Increse it if Optic is not ending on time.">Timeout:</label>
                     <input #timeout id="timeout-box" type="number" size="3" max="20" min="1" placeholder="2"/>
-                    <select #plannerSel class="selectpicker" data-width="140px">
+                    <select #plannerSel class="selectpicker float-right float-md-none" data-width="140px">
                         <option value="sgplan" selected>SGPlan 5.2.2</option>
                         <option value="optic">Optic CLP</option>
                     </select>
-                    <button *ngIf="buttonEnabledFlag" type="button" class="btn btn-primary run-btn" (click)="execute(plannerSel.value, timeout.value)">Run</button>
-                    <button *ngIf="!buttonEnabledFlag" class="btn btn-primary run-btn" type="button" disabled>
+                    <button *ngIf="buttonEnabledFlag" type="button" class="btn btn-primary run-btn d-none d-sm-none d-md-inline" (click)="execute(plannerSel.value, timeout.value)">Run</button>
+                    <button *ngIf="!buttonEnabledFlag" class="btn btn-primary run-btn d-none d-sm-none d-md-inline" type="button" disabled>
                         <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                         Executing...
                     </button>
                 </div>
                 <!-- Selector for theme -->
-                <div class="col-5">
+                <div class="col-md-4 col-lg-5 d-none d-sm-none d-md-block">
                     <div class="float-right">
-                        <label for="theme-dropdown" class="col-form-label" data-toggle="tooltip" data-placement="top"
+                        <label for="theme-dropdown" class="col-form-label d-none d-md-none d-lg-inline" data-toggle="tooltip" data-placement="top"
                         title="Change the theme to use different text and background colors">Theme:</label>
                         <select id="theme-dropdown" class="selectpicker" data-style="btn-info" [(ngModel)]="selectedTheme" (change)="onThemeChanged($event)">
                             <option *ngFor="let theme of themes" [value]="theme">
@@ -52,23 +52,6 @@
                             </option>
                         </select>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- ACTIONS (SMARTPHONE) -->
-    <div class="row d-sm-block d-md-none">
-        <div class="col-12">
-            <div class="form-group row">
-                <!-- Execution options -->
-                <div class="col-12">
-                    <label for="timeout-box" class="col-form-label timeout-label" data-toggle="tooltip" data-placement="top"
-                            title="The planner will be killed after this time. Increse it if Optic is not ending on time.">Timeout:</label>
-                    <input #timeout id="timeout-box" type="number" size="3" max="20" min="1" placeholder="2"/>
-                    <select #plannerSel class="selectpicker float-right" data-width="140px">
-                        <option value="sgplan" selected>SGPlan 5.2.2</option>
-                        <option value="optic">Optic CLP</option>
-                    </select>
                 </div>
             </div>
         </div>
