--- a/poe-fe/poe-fe/src/app/components/editor/editor.component.html
+++ b/poe-fe/poe-fe/src/app/components/editor/editor.component.html
@@ -60,8 +60,8 @@
     <div class="row">
         <div class="col-sm-12 col-md-6 editor-box"
             [ngClass]="{
-                'col-xl-12': domainFullscreen,
-                'col-xl-6': !domainFullscreen,
+                'col-md-12': domainFullscreen,
+                'col-md-6': !domainFullscreen,
                 'hidden': problemFullscreen,
                 'd-none d-sm-none d-md-block': !domainSwitchVisible
             }"
@@ -74,8 +74,8 @@
         </div>
         <div class="col-sm-12 col-md-6 editor-box"
             [ngClass]="{
-                'col-xl-12': problemFullscreen,
-                'col-xl-6': !problemFullscreen,
+                'col-md-12': problemFullscreen,
+                'col-md-6': !problemFullscreen,
                 'hidden': domainFullscreen,
                 'd-none d-sm-none d-md-block': !problemSwitchVisible
             }"
