--- a/poe-fe/poe-fe/src/app/components/toolbar/toolbar.component.html
+++ b/poe-fe/poe-fe/src/app/components/toolbar/toolbar.component.html
@@ -62,22 +62,19 @@
         </button>
       </div>
       <div class="modal-body">
-        Copyright 2020 <a href="https://www.linkedin.com/in/pedro-sanchez/">Pedro Sánchez</a> (pedro.sanchezr@edu.uah.es)<br/>
+        <strong>IMPORTANT:</strong> This repository includes binaries of third party software that might be protected by specific copyrights. Check the LICENSE.txt files and attribution sections before distributing the third party software.<br/>
         <br/>
-        This sofware is intended to be published under MIT license, I'm working on finishing some details and checking the license of any library or software used to confirm that this is the right choice.<br/>
-        <br/>
-        Meanwhile, feel free to use it, share it and provide feedback.
-        <!--
+
         MIT License<br/>
         <br>
-        Copyright 2020 Pedro Sánchez (pedro.sanchezr@edu.uah.es)<br/>
+        Copyright 2020 <a href="https://www.linkedin.com/in/pedro-sanchez/">Pedro Sánchez</a> (pedro.sanchezr@edu.uah.es)<br/>
         <br/>
         Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:<br/>
         <br/>
         The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.<br/>
         <br/>
         THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-        -->
+
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -99,7 +96,7 @@
       <div class="modal-body">
         This software has been developed by <a href="https://www.linkedin.com/in/pedro-sanchez/">Pedro Sánchez</a> (pedro.sanchezr@edu.uah.es) as part of a free choice task for the <a href="https://www.uah.es/en/estudios/estudios-oficiales/grados/asignatura/Planificacion-Automatica-781003">Automated Planning and Scheduling</a> subject of the <a href="https://www.uah.es/en/estudios/estudios-oficiales/grados/Grado-en-Ingenieria-Informatica/">Degree in Computer Science Engineering</a> of the <a href="https://www.uah.es/">University of Alcalá de Henares</a> (Madrid)<br/>
         <br/>
-        <b>Github repository: </b> <a href="https://github.com/pedrosanchezr/poe">https://github.com/pedrosanchezr/poe</a> (Private yet, pending to review before publishing)
+        <b>Github repository: </b> <a href="https://github.com/pedrosanchezr/poe">https://github.com/pedrosanchezr/poe</a>
         <br/>
         <br/>
         <b>Planners included:</b>
@@ -108,6 +105,8 @@
           <ul>
             <li><b>Authors:</b> Chih-Wei Hsu, Benjamin W. Wah, Ruoyun Huang, and Yixin Chen</li>
             <li><a href="https://wah.cse.cuhk.edu.hk/wah/programs/SGPlan/">https://wah.cse.cuhk.edu.hk/wah/programs/SGPlan/</a></li>
+            <li>IMPORTANT: Copyright (C) 2006, Board of Trustees of the University of Illinois.<br/>We got an approval to use it with NO COMMERCIAL purposes on THIS project. Contact the authors/owners before using it on your projects.
+            </li>
           </ul>
           <li>Optic</li>
           <ul>
